created book store application

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /MVCAppRepo01/.vs/MVCAppRepo01
+/MVCAppRepo01/MVCAppRepo01/bin/Debug/netcoreapp3.1
+/MVCAppRepo01/MVCAppRepo01/obj
+/.vs
